--- a/src/sitori/Main.form
+++ b/src/sitori/Main.form
@@ -160,20 +160,26 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="ItemCategoryMenuBtn" pref="253" max="32767" attributes="0"/>
-                  <Component id="ItemMenuBtn" pref="253" max="32767" attributes="0"/>
-                  <Component id="ItemOutMenuBtn" pref="253" max="32767" attributes="0"/>
-                  <Component id="LastActivityMenuBtn" pref="253" max="32767" attributes="0"/>
-                  <Component id="StorageMenuBtn" alignment="0" pref="253" max="32767" attributes="0"/>
-                  <Component id="ItemInMenuBtn" pref="253" max="32767" attributes="0"/>
-                  <Component id="LogoContainer" alignment="0" max="32767" attributes="0"/>
+                  <Component id="ItemCategoryMenuBtn" pref="507" max="32767" attributes="0"/>
+                  <Component id="ItemMenuBtn" pref="507" max="32767" attributes="0"/>
+                  <Component id="ItemOutMenuBtn" pref="507" max="32767" attributes="0"/>
+                  <Component id="StorageMenuBtn" alignment="0" pref="507" max="32767" attributes="0"/>
+                  <Component id="ItemInMenuBtn" pref="507" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="LogoContainer" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="259" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Component id="LastActivityMenuBtn" min="-2" pref="253" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="LogoContainer" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                       <Component id="StorageMenuBtn" min="-2" pref="70" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="ItemCategoryMenuBtn" min="-2" pref="70" max="-2" attributes="0"/>
@@ -185,7 +191,7 @@
                       <Component id="ItemOutMenuBtn" min="-2" pref="70" max="-2" attributes="0"/>
                       <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
                       <Component id="LastActivityMenuBtn" min="-2" pref="70" max="-2" attributes="0"/>
-                      <EmptySpace pref="92" max="32767" attributes="0"/>
+                      <EmptySpace pref="129" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -530,10 +536,9 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="1" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="LastActivityLabel" min="-2" pref="247" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="LastActivityLabel" pref="247" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -580,16 +585,16 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabel16" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jLabel16" min="-2" pref="248" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabel16" pref="151" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jLabel16" min="-2" pref="111" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
