--- a/src/sitori/item/ItemView.form
+++ b/src/sitori/item/ItemView.form
@@ -69,10 +69,8 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="DeleteBtn" alignment="1" min="-2" pref="45" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="SaveBtn" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                      <Component id="ResetBtn" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="ResetBtn" min="-2" pref="45" max="-2" attributes="0"/>
+                  <Component id="SaveBtn" alignment="0" min="-2" pref="45" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="277" max="-2" attributes="0"/>
