--- a/src/sitori/item_out/ItemOutView.form
+++ b/src/sitori/item_out/ItemOutView.form
@@ -246,6 +246,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="SaveBtn">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="f0" green="f0" red="f0" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Noto Sans" size="17" style="0"/>
         </Property>
