--- a/src/sitori/item_in/ItemInView.form
+++ b/src/sitori/item_in/ItemInView.form
@@ -214,6 +214,9 @@
         <Component class="javax.swing.JTable" name="itemInTable">
           <Properties>
             <Property name="autoCreateRowSorter" type="boolean" value="true"/>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="f0" green="f0" red="f0" type="rgb"/>
+            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Noto Sans" size="17" style="0"/>
             </Property>
